# scscore

./: INSTALL.md  MANIFEST.in  README.md  example.py  install_existing_env.sh  pyproject.toml  requirements.txt  setup.sh
scscore/: __init__.py  cli.py  standalone_model_numpy.py
